# Show-Me-The-Timer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  clock.h  main.cpp  makefile
Clock/: clock.cpp
Clock/include/: clock.h
